--- a/style.css
+++ b/style.css
@@ -112,3 +112,31 @@ font-family: 'roboto', sans-serif;
         font-size: 8px;
         font-family: cursive;
         }
+/* responsive */
+ @media (max-width: 786px){
+          .nav ul li a{
+          float: right;
+          }
+          .col h1{
+          font-size: 20px;
+          margin-top: 20px;
+          }
+          .col p{
+            font-size: 10px;
+            margin-top: 20px;
+            }
+        .row{
+        flex-direction: column;
+        }
+        
+        .nav ul{
+        display: flex;
+        margin-right: 50%;
+        }
+        .container{
+          width: 95%;
+          height: 200vh;
+         
+          }
+        
+        }
